// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the tag selector on click 1`] = `
<div
  className="big-spacer-top overview-meta-tags"
>
  <button
    className="button-link"
    onClick={[Function]}
  >
    <TagsList
      allowUpdate={true}
      tags={
        Array [
          "foo",
          "bar",
        ]
      }
    />
  </button>
</div>
`;

exports[`should open the tag selector on click 2`] = `
<div
  className="big-spacer-top overview-meta-tags"
>
  <button
    className="button-link"
    onClick={[Function]}
  >
    <TagsList
      allowUpdate={true}
      tags={
        Array [
          "foo",
          "bar",
        ]
      }
    />
  </button>
  <div>
    <MetaTagsSelector
      position={
        Object {
          "right": 0,
          "top": 0,
        }
      }
      project="my-second-project"
      selectedTags={
        Array [
          "foo",
          "bar",
        ]
      }
      setProjectTags={[Function]}
    />
  </div>
</div>
`;

exports[`should open the tag selector on click 3`] = `
<div
  className="big-spacer-top overview-meta-tags"
>
  <button
    className="button-link"
    onClick={[Function]}
  >
    <TagsList
      allowUpdate={true}
      tags={
        Array [
          "foo",
          "bar",
        ]
      }
    />
  </button>
</div>
`;

exports[`should render with tags and admin rights 1`] = `
<div
  className="big-spacer-top overview-meta-tags"
>
  <button
    className="button-link"
    onClick={[Function]}
  >
    <TagsList
      allowUpdate={true}
      tags={
        Array [
          "foo",
          "bar",
        ]
      }
    />
  </button>
</div>
`;

exports[`should render without tags and admin rights 1`] = `
<div
  className="big-spacer-top overview-meta-tags"
>
  <TagsList
    allowUpdate={false}
    className="note"
    tags={
      Array [
        "no_tags",
      ]
    }
  />
</div>
`;
